--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 		
 <script>
-    window.location.href = "https://balmyrind.com/y18qgf61?key=8e41af7fb2f213ebdda658bd16b91faf"
+    window.location.href = "https://antennascan.com/y18qgf61?key=8e41af7fb2f213ebdda658bd16b91faf"
 </script>
 
 		<title> Girls Will Be Girls (2024) Watch Full Movie (HD)</title>
